# familylink-client

./: .dockerignore  .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  logging_config.json  output.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_linux_machines.py  003_bonus_mins.py
docs/: DATAFLOW.md  HOWTO_DEVICE_API.md  SUMMARY.md  TESTING.md
docs/superpowers/plans/: 2026-06-19-client-refactor.md  2026-06-19-server-web-service.md  2026-06-22-apps-per-child.md  2026-06-24-discord-bot.md  2026-06-25-coolify-cookie-sync.md  2026-06-25-linux-bonus-time.md  2026-06-25-linux-machine-control.md  2026-06-25-linux-machines-key-gen.md
docs/superpowers/specs/: 2026-06-19-web-service-architecture-design.md  2026-06-22-apps-per-child-design.md  2026-06-24-discord-bot-design.md  2026-06-25-coolify-cookie-sync-design.md  2026-06-25-linux-bonus-time-design.md  2026-06-25-linux-machine-control-design.md
scripts/: run_tests.py
src/familylink/: __init__.py  auth.py  cli.py  client.py  models.py  parsers.py
src/familylink_server/: __init__.py  config.py  main.py
src/familylink_server/auth/: __init__.py  oauth.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_e2e_workflow.py
tests/fixtures/: cookies_sample.txt  mock_api_responses.json
tests/integration/: __init__.py  test_cli_integration.py  test_client_integration.py
tests/server/: __init__.py  conftest.py  test_auth.py  test_bot_commands.py  test_bot_embeds.py  test_bot_linux.py  test_bot_views.py  test_config.py  test_db_models.py  test_discord_notifier.py  test_family_link_service.py  test_linux_poller.py  test_linux_ssh.py  test_main.py  test_routers_apps.py  test_routers_dashboard.py  test_routers_devices.py  test_routers_discord.py  test_routers_linux_machines.py  test_routers_members.py
tests/smoke/: __init__.py  test_cli_help.py  test_import.py
tests/unit/: __init__.py  test_auth.py  test_cli.py  test_cli_coolify.py  test_client.py  test_models.py  test_parsers.py
(+34 files in other folders)
