[project]
name = "familylink"
version = "0.2.0"
description = "Non-official Python package to interact with Google Family Link"
readme = "README.md"
authors = [
    { name = "Thibault Ducret", email = "hello@tducret.com" },
    { name = "Adam Roland", email = "roland@adaminformatika.hu" },
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
browser = [
    "browser-cookie3>=0.19.1",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "discord.py>=2.4",
    "asyncssh>=2.14",
]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.23.0",
    "freezegun>=1.5.0",
    "mypy>=1.8.0",
]

[project.scripts]
familylink = "familylink.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/familylink", "src/familylink_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = 'py312'

[tool.ruff.lint]
select = [
    'F',      # Pyflakes
    'E',      # pycodestyle (Error)
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
    'YTT',    # flake8-2020
    'B',      # flake8-bugbear
    'T10',    # flake8-debugger
    'T20',    # flake8-print
    'C4',     # flake8-comprehensions
    'PYI006', # flake8-pyi
    'PYI062', # flake8-pyi
    'PYI063', # flake8-pyi
    'PYI066', # flake8-pyi
]
ignore = ['D105', 'D107', 'D205', 'D415', 'E501', 'B011', 'B028', 'B904']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
isort = { known-first-party = ['familylink'] }
pydocstyle = { convention = 'google' }

[tool.ruff.lint.per-file-ignores]
'src/familylink/__init__.py' = ['D104']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
